fix: update hospital level display format and remove overflow from my digimon list

--- a/src/app/modules/desktop/components/home-section/home-section.component.scss
+++ b/src/app/modules/desktop/components/home-section/home-section.component.scss
@@ -90,7 +90,6 @@
   height: 315px;
   width: -webkit-fill-available;
   height: -webkit-fill-available;
-  overflow: hidden;
 
   .my-digimon-list {
     flex: 1;
